--- a/cn/weapon/Boomstick.html
+++ b/cn/weapon/Boomstick.html
@@ -39,12 +39,9 @@
         <main class="main-content">
             <h1>三发猎枪</h1>
             <p> 
-                三发猎枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                三发猎枪是一把困难模式前的枪类武器，由5个孢子，15个铁锭和一个非法枪械部件在工作台处合成<br>
+                一次射出一片子弹。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Boomstick.png" alt="Boomstick" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -59,16 +56,15 @@
         <div class="image-block">
             <h1 class="img-Item-Title">三发猎枪</h1>
             <img src="Boomstick.png" alt="Boomstick">
-            <p class="item-id">内部名: 三发猎枪</p>
+            <p class="item-id">内部名: Boomstick</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 11</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 21</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “我可没时间胡闹”<br>
+            
             </p>
         </div>        
     </div>
