--- a/cn/weapon/ClockworkAssaultRifle.html
+++ b/cn/weapon/ClockworkAssaultRifle.html
@@ -39,12 +39,9 @@
         <main class="main-content">
             <h1>发条式突击步枪</h1>
             <p> 
-                发条式突击步枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                发条式突击步枪是一把困难模式后的枪类武器，掉落自血肉之墙<br>
+                一次射出3发子弹。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="ClockworkAssaultRifle.png" alt="ClockworkAssaultRifle" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +58,13 @@
             <img src="ClockworkAssaultRifle.png" alt="ClockworkAssaultRifle">
             <p class="item-id">内部名: ClockworkAssaultRifle</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 21</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 5</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “我知道它们为什么发出滴答滴答的声音了，我也知道怎样让它们停下来”<br>
+                
             </p>
         </div>        
     </div>
