--- a/cn/weapon/QuadBarrelShotgun.html
+++ b/cn/weapon/QuadBarrelShotgun.html
@@ -39,12 +39,10 @@
         <main class="main-content">
             <h1>四管霰弹枪</h1>
             <p> 
-                四管霰弹枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                四管霰弹枪是一把困难模式前的枪类武器，击败骷髅王后在军火商处用35金币购买<br>
+                发射大量散布的子弹。子弹散布很大，所以只适合贴近射击。<br>
+                4发弹匣，装填时会将子弹逐一填入，而不是一次性填好。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="QuadBarrelShotgun.png" alt="QuadBarrelShotgun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +59,13 @@
             <img src="QuadBarrelShotgun.png" alt="QuadBarrelShotgun">
             <p class="item-id">内部名: QuadBarrelShotgun</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 12</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “把枪管戳到那些怪物的眼睛上，这样就不需要瞄准了”<br>
+                
             </p>
         </div>        
     </div>
