--- a/cn/weapon/StarCannon.html
+++ b/cn/weapon/StarCannon.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>星星炮</h1>
             <p> 
-                星星炮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                星星炮是一把困难模式前的枪类武器，由迷你鲨，10个陨石锭和5个坠落之星在砧处合成<br>
+                左键发射坠落之星，拥有惊人的300弹匣容量。<br>
+                射速会随着连续发射而逐渐加快，在连射约20发之后达到最大射速。<br>
+                不俗的单发伤害和射速，以及无限穿透的子弹，使得在对抗蠕虫类boss时具有不错的表现。<br>
+                “桑百颗够吗？”<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="StarCannon.png" alt="StarCannon" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -59,16 +59,15 @@
         <div class="image-block">
             <h1 class="img-Item-Title">星星炮</h1>
             <img src="StarCannon.png" alt="StarCannon">
-            <p class="item-id">内部名: 星星炮</p>
+            <p class="item-id">内部名: StarCannon</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 25</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “星光会照亮前方”<br>
+                
             </p>
         </div>        
     </div>
