--- a/cn/weapon/SuperStarCannon.html
+++ b/cn/weapon/SuperStarCannon.html
@@ -39,12 +39,10 @@
         <main class="main-content">
             <h1>超级星星炮</h1>
             <p> 
-                超级星星炮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                超级星星炮是一把困难模式后的枪类武器，由星星炮和12个神圣锭在秘银砧处合成<br>
+                发射星辰。<br>
+                加倍的射速！加倍的弹容量！加倍的面板伤害！（所以dps应该是翻四倍，对。。。对吧？）<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="SuperStarCannon.png" alt="SuperStarCannon" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +59,13 @@
             <img src="SuperStarCannon.png" alt="SuperStarCannon">
             <p class="item-id">内部名: SuperStarCannon</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 60</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 15</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “现在我们有了更大更强的星星发射器”<br>
+                
             </p>
         </div>        
     </div>
