--- a/cn/weapon/TacticalShotgun.html
+++ b/cn/weapon/TacticalShotgun.html
@@ -39,12 +39,11 @@
         <main class="main-content">
             <h1>战术霰弹枪</h1>
             <p> 
-                战术霰弹枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                战术霰弹枪是一把困难模式后的枪类武器，在击败世纪之花后掉落于地牢的骷髅特警<br>
+                漫长的装填，然后快速发射！<br>
+                一次发射12发子弹，在极近距离时无视目标15点防御。<br>
+                战术霰弹枪拥有短暂的爆发和漫长的装弹时间。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="TacticalShotgun.png" alt="TacticalShotgun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +60,13 @@
             <img src="TacticalShotgun.png" alt="TacticalShotgun">
             <p class="item-id">内部名: TacticalShotgun</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 40</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “没有什么是贴脸一喷解决不了的，如果有，就多来几喷”<br>
+                
             </p>
         </div>        
     </div>
