--- a/cn/weapon/ZapinatorGray.html
+++ b/cn/weapon/ZapinatorGray.html
@@ -39,12 +39,11 @@
         <main class="main-content">
             <h1>灰冲击枪</h1>
             <p> 
-                灰冲击枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                灰冲击枪是一把困难模式前的魔法枪类武器，在旅商处有几率出售。<br>
+                左键射出激光，消耗16魔力。有几率额外射出激光。<br>
+                “陨石套和激光枪更配哦”<br>
+
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神话</a>
             </p>
             <img src="ZapinatorGray.png" alt="ZapinatorGray" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -59,16 +58,15 @@
         <div class="image-block">
             <h1 class="img-Item-Title">灰冲击枪</h1>
             <img src="ZapinatorGray.png" alt="ZapinatorGray">
-            <p class="item-id">内部名: 灰冲击枪</p>
+            <p class="item-id">内部名: ZapinatorGray</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 42</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                这是你的幸运光<br>
+                
             </p>
         </div>        
     </div>
