--- a/cn/weapon/PhoenixBlaster.html
+++ b/cn/weapon/PhoenixBlaster.html
@@ -39,12 +39,10 @@
         <main class="main-content">
             <h1>凤凰爆破枪</h1>
             <p> 
-                凤凰爆破枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                凤凰爆破枪是一把困难模式前的枪类武器，由手枪，10个狱石锭和10个纯净凝胶在铁砧处合成。<br>
+                凤凰爆破枪并不能发射特殊子弹，也不能造成任何火焰效果的攻击，所以这是个具有迷惑性的名字。<br>
+                曾经凭借稳定的弹道和方便控制的射速，成为射手肉前优选之一，但原版的“对肉山宝具”如今早已跌落神坛。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="PhoenixBlaster.png" alt="PhoenixBlaster" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +59,13 @@
             <img src="PhoenixBlaster.png" alt="PhoenixBlaster">
             <p class="item-id">内部名: PhoenixBlaster</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 30</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 13</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “狱石武器却不能掌控火焰？事实上子弹无法承受这股热量”<br>
+                
             </p>
         </div>        
     </div>
