--- a/cn/weapon/Sandgun.html
+++ b/cn/weapon/Sandgun.html
@@ -39,12 +39,13 @@
         <main class="main-content">
             <h1>沙枪</h1>
             <p> 
-                沙枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                沙枪是一把困难模式前的枪类武器，由1个非法枪械部件，10个蚁狮上颚，5个黄玉在熔炉处合成<br>
+                左键连续发射沙弹，落到实体物块上会变成不可穿过的沙块。<br>
+                右键喷射出更多沙弹，牺牲了射速和准度换取近距离的爆发伤害。（打不中就是近距离的大范围沙块）<br>
+                大名鼎鼎的“平台毁灭者”，“地形破坏者”，一次次的空枪让好不容易（划掉）建成的平台变得一片狼藉。<br>
+                麻烦的副作用换来的，是凌驾于几乎所有boss前远程武器的高额伤害。
+                “清理平台真是个麻烦事。”<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Sandgun.png" alt="Sandgun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -63,12 +64,11 @@
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 16</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “带着它把自己埋到沙子里，这样就可以假装成一个蚁狮。”<br>
+                
             </p>
         </div>        
     </div>
