--- a/cn/weapon/ZapinatorOrange.html
+++ b/cn/weapon/ZapinatorOrange.html
@@ -39,12 +39,9 @@
         <main class="main-content">
             <h1>橙冲击枪</h1>
             <p> 
-                橙冲击枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                橙冲击枪是一把困难模式后的魔法枪类武器，在旅商处有几率出售<br>
+                左键射出激光，消耗16魔力。有几率额外射出激光。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">神话</a>
             </p>
             <img src="ZapinatorOrange.png" alt="ZapinatorOrange" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +58,13 @@
             <img src="ZapinatorOrange.png" alt="ZapinatorOrange">
             <p class="item-id">内部名: ZapinatorOrange</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 100</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                这是你的幸运光<br>
+                
             </p>
         </div>        
     </div>
