--- a/cn/weapon/SnowballCannon.html
+++ b/cn/weapon/SnowballCannon.html
@@ -39,12 +39,11 @@
         <main class="main-content">
             <h1>雪球炮</h1>
             <p> 
-                雪球炮是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                雪球炮是一把困难模式前的枪类武器，掉落自冰雪宝箱怪，或者用1个非法枪械部件，30个雪块和50个冰块在砧处合成<br>
+                8发弹匣，每发射出5个沿抛物线轨迹下落的雪球。<br>
+                平地发射最远恰好能达到屏幕边缘。<br>
+                “一起来打雪仗吧！”<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="SnowballCannon.png" alt="SnowballCannon" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -63,12 +62,11 @@
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 40</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “你知道，往里面装雪球很冻手，所以我一次只能装一点”<br>
+                
             </p>
         </div>        
     </div>
