--- a/cn/weapon/Uzi.html
+++ b/cn/weapon/Uzi.html
@@ -39,12 +39,11 @@
         <main class="main-content">
             <h1>乌兹冲锋枪</h1>
             <p> 
-                乌兹冲锋枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                乌兹冲锋枪是一把困难模式后的枪类武器，掉落自愤怒捕手<br>
+                将普通子弹转化为高速子弹，能穿透两个敌人。<br>
+                超高的射速，超稳定的弹道，不俗的弹容量（80发），小怪掉落，性价比极高。<br>
+                “要是能双持就好了。”<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Uzi.png" alt="Uzi" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -59,16 +58,15 @@
         <div class="image-block">
             <h1 class="img-Item-Title">乌兹冲锋枪</h1>
             <img src="Uzi.png" alt="Uzi">
-            <p class="item-id">内部名: 乌兹冲锋枪</p>
+            <p class="item-id">内部名: Uzi</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 30</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 6</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “轻便而充满杀伤力，不双持简直是对它的浪费”<br>
+                
             </p>
         </div>        
     </div>
