--- a/cn/weapon/StakeLauncher.html
+++ b/cn/weapon/StakeLauncher.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>尖桩发射器</h1>
             <p> 
-                尖桩发射器是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                尖桩发射器是一把困难模式后的枪类武器，掉落自南瓜月事件boss哀木 <br>
+                尖桩发射器被视为弓，但你可以装上瞄准镜。<br>
+                发射无限穿透的尖桩。无限穿透不衰减！对多体节boss宝具。<br>
+                星神游龙，你知道我要说什么。（doge）<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="StakeLauncher.png" alt="StakeLauncher" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +61,13 @@
             <img src="StakeLauncher.png" alt="StakeLauncher">
             <p class="item-id">内部名: StakeLauncher</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 408</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “彻底杀死吸血鬼的唯一办法就是将木制尖桩穿过它的心脏，但是不是吸血鬼也活不了”<br>
+                
             </p>
         </div>        
     </div>
