--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <img src="/asset/IntactLogo.png" alt="Logo">
             <h1>欢迎来到灾厄大修Wiki</h1>
-            <p>这是一个为灾厄大修玩家和开发者提供的资料库，您可以在这里查询关于模组内容的各种信息 (--当前维基并未制作完成，如果发现错误之处或者未完成的页面请见谅--)</p>
+            <p>这是一个为灾厄大修玩家和开发者提供的资料库，您可以在这里查询关于模组内容的各种信息(--当前维基并未制作完成,完成进度约35%,如果发现错误之处或者未完成的页面请见谅--)</p>
 
             <div class="categories">
                 <section class="category" id = "1">
@@ -63,9 +63,7 @@
         </main>
     </div>
 
-    <footer class="wiki-footer">
-        <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
-    </footer>
+    <footer class="wiki-footer"></footer>
     <script src="index.js" defer></script>
     <script src="index_language.js" defer></script>
 </body>
