--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -41,10 +41,10 @@
 
         <main class="main-content">
             <h1>武器列表</h1>
-            <p>点击任何武器以查看详细信息，该页面含有原版导向和项目源代码导向，为开发者(主要是我们自己)提供方便</p>
+            <p>点击任何武器以查看详细信息，该页面含有原版导向和项目源代码导向，为开发者提供方便</p>
             <div class="category-bar">
-                <div class="category-title">大修新增武器</div>
-                <div class="category-description">我们还能想出更有趣的吗?</div>
+                <div class="category-title">新增武器</div>
+                <div class="category-description">独立与原版和本体的内容</div>
             </div>
             <div class="weapon-grid">
                 <div class="weapon-item" onclick="location.href='/cn/weapon/ElementWhip.html'">
