--- a/en/core/weaponList.html
+++ b/en/core/weaponList.html
@@ -30,9 +30,9 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="#">Modify</a></li>
-                    <li><a href="#">Enemy</a></li>
-                    <li><a href="#">About Mod</a></li>
+                    <li><a href="/en/core/mechanism.html">Mechanics</a></li>
+                    <li><a href="/en/core/biology.html">Creatures</a></li>
+                    <li><a href="/en/core/aboutMod.html">About Mod</a></li>
                 </ul>
             </nav>
         </aside>
