--- a/cn/weapon/Murasama.html
+++ b/cn/weapon/Murasama.html
@@ -65,7 +65,7 @@
             <img src="MurasamaPage.gif" alt="Murasama">
             <p class="item-id">内部名: Murasama</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 8000</p>
+            <p class="item-damage">伤害: 10-4000</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 5</p>
             <p class="item-property">物品介绍</p>
@@ -86,11 +86,11 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>10</td>
+                        <td>12</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                     </tr>
                     <tr>
                         <td>3</td>
