--- a/cn/weapon/Murasama.html
+++ b/cn/weapon/Murasama.html
@@ -66,7 +66,7 @@
             <p class="item-id">内部名: Murasama</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10-4000</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-knockback">击退: 1.6-6.5</p>
             <p class="item-usetimer">使用时间: 5</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
