--- a/cn/weapon/SHPC.html
+++ b/cn/weapon/SHPC.html
@@ -59,12 +59,13 @@
             <img src="SHPC.png" alt="SHPC">
             <p class="item-id">内部名: SHPC</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 1200</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 8-1200</p>
+            <p class="item-knockback">击退: 4</p>
             <p class="item-usetimer">使用时间: 7</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                “传奇的光辉已经暗淡...”
+                发射会停留在空中并引发巨大爆炸的相位激光球
+			    右键发射强大的能量束
             </p>
 
             <h1 class="item-property">伤害成长曲线</h1>
