--- a/cn/weapon/HalibutCannon.html
+++ b/cn/weapon/HalibutCannon.html
@@ -59,8 +59,8 @@
             <img src="HalibutCannon.png" alt="HalibutCannon">
             <p class="item-id">内部名: HalibutCannon</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 40</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 3-40</p>
+            <p class="item-knockback">击退: 1</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
