--- a/en/core/aboutMod.html
+++ b/en/core/aboutMod.html
@@ -60,7 +60,7 @@
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/en/core/mechanism.html">Mechanics</a></li>
                     <li><a href="/en/core/biology.html">Creatures</a></li>
-                    <li><a href="/en/core/aboutMod.html">About Mod</a></li>
+                    <li><a href="/en/core/weaponList.html">Weapon</a></li>
                 </ul>
             </nav>
         </aside>
