--- a/en/core/mechanism.html
+++ b/en/core/mechanism.html
@@ -30,7 +30,7 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/en/core/mechanism.html">Mechanics</a></li>
+                    <li><a href="/en/core/weaponList.html">Weapon</a></li>
                     <li><a href="/en/core/biology.html">Creatures</a></li>
                     <li><a href="/en/core/aboutMod.html">About Mod</a></li>
                 </ul>
