--- a/cn/weapon/SniperRifle.html
+++ b/cn/weapon/SniperRifle.html
@@ -39,12 +39,15 @@
         <main class="main-content">
             <h1>狙击步枪</h1>
             <p> 
-                狙击步枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                狙击步枪是一把困难模式后的枪类武器，击败世纪之花后由地牢的骷髅狙击手掉落<br>
+                按住右键开镜（无需狙击镜类饰品），可以看到最远距离人物横向130格，纵向90格的区域，适合远距离打击。<br>
+                火枪子弹或神射手子弹会被转化成高速子弹，这避免了神射手子弹多次反弹造成超高额伤害的问题。<br>
+                按住左键会有红色区域呈扇形慢慢聚拢成直线（类似钛金电磁炮），精准度和伤害随着瞄准时间增长而增加。<br>
+                其蓄力的发射手感是其与其他枪类不同的独特玩法。<br>
+                拥有4发的弹匣，前三发无法暴击，第四发必定暴击。<br>
+                射出的子弹将会无视目标护甲。<br>
+                坐骑会影响这把精密武器的准确度。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="SniperRifle.png" alt="SniperRifle" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +64,14 @@
             <img src="SniperRifle.png" alt="SniperRifle">
             <p class="item-id">内部名: SniperRifle</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 244</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                ——久远的时间削弱了这把武器一半的力量<br>
+                “当十字线把你锁定，死神将亲吻你的额头。”<br>
+
             </p>
         </div>        
     </div>
