--- a/cn/weapon/Dicoria.html
+++ b/cn/weapon/Dicoria.html
@@ -47,9 +47,6 @@
             <img src="Dicoria.gif" alt="Dicoria" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
         </main>
@@ -64,6 +61,8 @@
             <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
+                发射双发子弹，射击可以蓄力<br>
+			    蓄力满后会发射一道热能射线<br>
                 “话说我们这样会不会斗鸡眼”
             </p>
         </div>        
