--- a/cn/weapon/HyperionBarrage.html
+++ b/cn/weapon/HyperionBarrage.html
@@ -46,9 +46,6 @@
             <img src="HyperionBarrage.gif" alt="HyperionBarrage" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
         </main>
@@ -63,6 +60,7 @@
             <p class="item-usetimer">使用时间: 80</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
+                发射热射巡航弹，击中目标后会分裂成六个子航弹造成二次伤害<br>
                 "物尽其用"
             </p>
         </div>        
