--- a/cn/weapon/RaiderGun.html
+++ b/cn/weapon/RaiderGun.html
@@ -48,9 +48,6 @@
             <img src="RaiderGun.gif" alt="RaiderGun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
         </main>
@@ -65,6 +62,9 @@
             <p class="item-usetimer">使用时间: 12</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
+                将火枪子弹转化为高速子弹<br>
+                右键可以翻滚冲刺，并将弹匣填满<br>
+                翻滚后的第一发子弹会被转化为毁灭者榴弹<br>
                 "非常适合用于室内人质解救"
             </p>
         </div>        
