--- a/cn/weapon/WraithKunai.html
+++ b/cn/weapon/WraithKunai.html
@@ -42,8 +42,6 @@
                 幽魂苦无是一把月球领主后的盗贼武器，由材料合成<br>
                 左键投掷三枚可追踪的幽魂苦无<br>
                 潜伏攻击向四周丢出一片幽灵匕首，短暂悬停后冲向敌人<br>
-                苦无会对目标施加着火了！减益<br>
-                
                 它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境</a>
             </p>
             <img src="WraithKunai.gif" alt="WraithKunai" class="pwertGIF" loading="lazy">
@@ -64,7 +62,7 @@
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 丢出三枚追踪敌人的苦无<br>
-                潜伏攻击会生成一片悬停在玩家周围的幽灵苦无<br>
+                潜伏攻击会生成一片悬停在玩家周围的幽灵苦无
                 
             </p>
         </div>        
