--- a/cn/weapon/CommandersChainsaw.html
+++ b/cn/weapon/CommandersChainsaw.html
@@ -39,15 +39,12 @@
         <main class="main-content">
             <h1>统帅链锯</h1>
             <p> 
-                统帅链锯是一把机械骷髅王后的近战武器，有25％的概率直接掉落于机械骷髅王<br>
+                统帅链锯是一把机械骷髅王后的真近战武器，有25％的概率直接掉落于机械骷髅王<br>
                 击中目标时生成火花<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="CommandersChainsaw.gif" alt="CommandersChainsaw" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
-            <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
@@ -63,6 +60,7 @@
             <p class="item-usetimer">使用时间: 4</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
+                击中目标时生成火花<br>
                 "多加点柴油"
             </p>
         </div>        
