--- a/cn/weapon/GeminisTribute.html
+++ b/cn/weapon/GeminisTribute.html
@@ -47,9 +47,6 @@
             <img src="GeminisTribute.gif" alt="GeminisTribute" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
-            </button>
-            <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
             </button>
         </main>
@@ -64,6 +61,8 @@
             <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
+                投掷出一把快速来回切割的镰刀<br>
+			    击中敌人后会生成两把额外的伴生之镰<br>
                 “只能存在一个主人格，很明显是魔焰眼胜利了”
             </p>
         </div>        
