--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 
 <head>
@@ -928,13 +928,13 @@
                     <p>SDFMG</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/DeadSunsWind.html'">
+                <!--<div class="weapon-item" onclick="location.href='/cn/weapon/DeadSunsWind.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/DeadSunsWind.png" alt="DeadSunsWind">
                     </div>
 
                     <p>薄冥之风</p>
-                </div>
+                </div>-->
 
                 <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/FetidEmesis.html'">
                     <div class="image-container">
