--- a/cn/weapon/DeadSunsWind.html
+++ b/cn/weapon/DeadSunsWind.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -59,7 +59,7 @@
         <div class="image-block">
             <h1 class="img-Item-Title">薄冥之风</h1>
             <img src="DeadSunsWind.png" alt="DeadSunsWind">
-            <p class="item-id">内部名: 薄冥之风</p>
+            <p class="item-id">内部名: DeadSunsWind</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 100</p>
             <p class="item-knockback">击退: 3</p>
