--- a/404.html
+++ b/404.html
@@ -23,17 +23,16 @@
         <script src="/searchTool/searchSystem.js"></script>
     </div>
     <div class="content">
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="index.html">返回主页</a></li>
-                    <li><a href="weaponList.html">武器</a></li>
-                    <li><a href="#">改动</a></li>
-                    <li><a href="#">敌人</a></li>
-                    <li><a href="#">关于模组</a></li>
+                    <li id="1s"><a href="#">武器</a></li>
+                    <li id="2s"><a href="#">机制</a></li>
+                    <li id="3s"><a href="#">生物</a></li>
+                    <li id="4s"><a href="#">关于模组</a></li>
                 </ul>
             </nav>
-        </div>
+        </aside>
         <div class="main-content">
             <img src="asset/M2.gif" alt="错误图标" class="error-icon">
             <h1>页面未找到</h1>
@@ -44,6 +43,7 @@
     <footer class="wiki-footer">
         <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
     </footer>
+    <script src="index.js" defer></script>
     <script src="/404_language.js" defer></script>
 </body>
 </html>
