--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     <footer class="wiki-footer">
         <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
     </footer>
-    <script src="index.js" defer></script>
+    <script src="/404.js" defer></script>
     <script src="/404_language.js" defer></script>
 </body>
 </html>
