--- a/404.html
+++ b/404.html
@@ -23,17 +23,17 @@
         <script src="/searchTool/searchSystem.js"></script>
     </div>
     <div class="content">
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="index.html">返回主页</a></li>
-                    <li><a href="weaponList.html">武器</a></li>
-                    <li><a href="#">改动</a></li>
-                    <li><a href="#">敌人</a></li>
-                    <li><a href="#">关于模组</a></li>
+                    <li><a href="/index.html">返回主页</a></li>
+                    <li><a href="/cn/core/weaponList.html">武器</a></li>
+                    <li><a href="/cn/core/biology.html">生物</a></li>
+                    <li><a href="/cn/core/mechanism.html">机制</a></li>
+                    <li><a href="/cn/core/aboutMod.html">关于模组</a></li>
                 </ul>
             </nav>
-        </div>
+        </aside>
         <div class="main-content">
             <img src="asset/M2.gif" alt="错误图标" class="error-icon">
             <h1>页面未找到</h1>
