--- a/cn/weapon/DartRifle.html
+++ b/cn/weapon/DartRifle.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>飞镖步枪</h1>
             <p> 
-                飞镖步枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                飞镖步枪是一把困难模式后的枪类武器，掉落自腐化宝箱怪<br>
+                以较高的伤害发射飞镖，无视敌人至多15点防御。<br>
+                发射诅咒镖会在飞行过程中落下咒炎，对命中敌人造成咒炎debuff。<br>
+                发射灵液镖会在飞行一段距离后分裂出三个额外的灵液镖，但受到重力影响严重，只适合以类似霰弹枪的方式近战。<br>
+                发射水晶镖可以穿透敌人，最多穿透5个目标。未命中敌人时，最多反弹6次然后消失。对群效果远超另外两种弹药。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="DartRifle.png" alt="DartRifle" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +61,13 @@
             <img src="DartRifle.png" alt="DartRifle">
             <p class="item-id">内部名: DartRifle</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 50</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “用吹箭筒发射飞镖？老天，你是要我把火药含进嘴里吗？”<br>
+                
             </p>
         </div>        
     </div>
