--- a/cn/weapon/NailGun.html
+++ b/cn/weapon/NailGun.html
@@ -39,12 +39,12 @@
         <main class="main-content">
             <h1>钉枪</h1>
             <p> 
-                钉枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                钉枪是一把困难模式后的枪类武器，掉落自日食事件的小怪“钉头”。<br>
+                发射一颗大钉子，击中敌人时在敌人头上爆出三颗爆炸钉子。<br>
+                子弹有一定的下坠，平地射程为36格。<br>
+                钉子命中伤害极低，主要输出来源于钉子爆炸的伤害。<br>
+                钉子命中敌人后会扎在敌人身上，一段时间后爆炸，造成极小范围的伤害。<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="NailGun.png" alt="NailGun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +61,13 @@
             <img src="NailGun.png" alt="NailGun">
             <p class="item-id">内部名: NailGun</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 30</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “从钉子头的头上拔下来的钉子，效果拔群，现在让我们试试制造更多的钉子头”<br>
+                
             </p>
         </div>        
     </div>
