--- a/cn/weapon/SDFMG.html
+++ b/cn/weapon/SDFMG.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>SDFMG</h1>
             <p> 
-                SDFMG是一把月球领主后的射手武器，由太空海豚极强和腐臭倾泻者升级而来<br>
+                SDFMG是一把月球领主后的射手武器，由太空海豚机枪和腐臭倾泻者升级而来<br>
                 左键快速发射子弹，并有概率发射海洋导弹<br>
                 海洋导弹会追踪敌人<br>
                 
