--- a/cn/weapon/SDMG.html
+++ b/cn/weapon/SDMG.html
@@ -39,11 +39,10 @@
         <main class="main-content">
             <h1>SDMG</h1>
             <p> 
-                SDMG是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                SDMG是一把月球领主后的枪类武器，掉落自月球领主。<br>
+                原版射手毕业武器，拥有极快的射速的300发超大弹容量。<br>
+                搭配无限穿透的夜明弹以达到最大输出效果。<br>
+
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="SDMG.png" alt="SDMG" class="pwertGIF" loading="lazy">
@@ -61,14 +60,13 @@
             <img src="SDMG.png" alt="SDMG">
             <p class="item-id">内部名: SDMG</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 85</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “它来自星界边境”<br>
+                
             </p>
         </div>        
     </div>
