--- a/cn/weapon/DartPistol.html
+++ b/cn/weapon/DartPistol.html
@@ -39,12 +39,11 @@
         <main class="main-content">
             <h1>飞镖手枪</h1>
             <p> 
-                飞镖手枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                飞镖手枪是一把困难模式后的枪类武器，掉落自猩红宝箱怪。<br>
+                以较快的速度发射飞镖，发射诅咒镖时只能造成70%伤害。<br>
+                和飞镖步枪相比逊色不少，唯一的优势只有略快的射速，然而这并不能弥补二者之间的DPS差距。<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="DartPistol.png" alt="DartPistol" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -61,14 +60,13 @@
             <img src="DartPistol.png" alt="DartPistol">
             <p class="item-id">内部名: DartPistol</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 30</p>
             <p class="item-knockback">击退: 0</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “用吹箭筒发射飞镖？老天，你是要我把火药含进嘴里吗？”<br>
+                
             </p>
         </div>        
     </div>
