--- a/cn/weapon/Murasama.html
+++ b/cn/weapon/Murasama.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>鬼妖村正</h1>
             <p> 
-                鬼妖村正是一把传奇武器，在开启了<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇武器系统设置</a>后可以从地狱实验室中拿取并直接使用<br>
+                鬼妖村正是一把传奇武器，在开启了传奇武器系统设置后可以从地狱实验室中拿取并直接使用<br>
                 它会随着游戏进度而逐渐强大，有1到15个等级<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
@@ -51,7 +51,7 @@
             <img src="MurasamaGIF3.gif" alt="MurasamaGIF3" class="pwertGIF" loading="lazy">
             <h3>终结技-空间斩</h3>
             <img src="MurasamaGIF4.gif" alt="MurasamaGIF4" class="pwertGIF" loading="lazy">
-            <p class="extra-tip"></p>
+            <p class="extra-tip">彩蛋:如果角色名字为Sam或者Vergil，将会发生一些有趣的事情</p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki/Murasama">查看原版信息</a>
             </button>
